Fix thumbnail spacing.

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -6,7 +6,7 @@ ul {
 
 ul li {
   list-style:none;
-  /* margin-bottom:25px; */
+  margin-bottom:25px;
 }
 
 ul li img {
